NGWAF-Deployment-Examples/nginx-ingress-with-ngwaf-reverse-proxy/nginx_ingress_with_reverse_proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ngwaf-reverse-proxy-nodeport-service
                port:
                  number: 8080
          - path: /anything
            pathType: Prefix
            backend:
              service:
                name: ngwaf-reverse-proxy-nodeport-service
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngwaf-reverse-proxy
spec:
  selector:
    matchLabels:
      app: ngwaf-reverse-proxy
  template:
    metadata:
      labels:
        app: ngwaf-reverse-proxy
    spec:
      containers:
      - name: sigsci-agent
        image: signalsciences/sigsci-agent:latest
        imagePullPolicy: 
        volumeMounts:
        - name: sigsci-tmp
          mountPath: /sigsci/tmp
      volumes:
      - name: sigsci-tmp
        emptyDir: {}
---
kind: Service 
apiVersion: v1 
metadata:
  name: ngwaf-reverse-proxy-nodeport-service
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: NodePort
  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: ngwaf-reverse-proxy
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - nodePort: 30163
      port: 8080 
      targetPort: 8080
